Fixed issue with IOS devices where toggle button was being stretched

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -254,6 +254,7 @@ html, body {
         }
 
         .dark-mode-button {
+          padding: 0;
           border: none;
           height: 67.5%;
           border-radius: 2rem;
